# Advent_Of_Code_2024

./: .gitignore  TODO.md  default.nix  pyproject.toml
.direnv/: nix-profile-unknown  nix-profile-unknown.rc
.github/workflows/: test.yml
Day1/: README.md  README_PART2.md  main.py  test_Day1.py  test_main.py  tests.py
Day2/: README.md  main.py  main2.py  test_Day2.py  tests.py
Day3/: README.md
Day4/: README.md
Day5/: README.md
Day6/: README.md
