[project]
name = "aoc2024"
version = "0.1.0"
description = "Jade Learning Advent Of Code 2024"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pytest>=8.3.4"]


[tool.pytest.ini_options]
# Add all test directories
testpaths = ["Day1", "Day2"]

# Default command line options
addopts = "-v"

# Test file patterns to discover
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Optional: Configure test markers
markers = ["slow: marks tests as slow", "unit: unit tests"]
